tests/sksl/errors/ArrayTypeTooManyDimensionsInFuncDeclUnsized1.glsl
### Compilation failed:

error: 1: unsized arrays are not permitted here
void func(float[][2] x) {}
               ^^
1 error
